# pymixfit

./: README.md  setup.cfg
examples/: 2024-04-26_154015_peak.npz  example00.py  example01.py
src/mixfit/: mixfit.py
src/mixfitfunctions/: cauchy.py  constant.py  differentialcauchy.py  differentialgaussian.py  gaussian.py  linear.py  mixfitfunction.py
tests/: 001_test01.py
