[metadata]
name = pymixfit-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Mixture fitting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pymixfit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	numpy >= 1.25,
	lmfit >= 1.3.1

[options.packages.find]
where = src
